/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package pt.ipp.isep.dei.esoft.pot.controller;


public class PublicarTarefaController {
    public void getTarefas() {
    }

    public void publicarTarefa(String perPublicacao, String perApresentacao, String perSeriacao, String tipoRegimento, String regAp) {
    }
    
    public void registaAnuncio() {
    }
}
