/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package pt.ipp.isep.dei.esoft.pot.model;

import java.util.List;

/**
 *
 * @author pokem
 */
public class RegistoAnuncio {

    public static List<Anuncio> getAnunciosElegiveisDoFreelancer(Freelancer freel) {
        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
    }
    private List<Anuncio>;
    public void getTarefas() {
    }

    public void getTarefaByCod(Tarefa taCod) {
    }
    
    public void publicarTarefa(String perPublicacao, String perApresentacao, String perSeriacao, String tipoRegimento, String regAp) {
    }
    
    public void validaAnuncio(Anuncio pt) {
    }
    
    public void registaAnuncio(Anuncio pt) {
    }
    
    public void addAnuncio(Anuncio pt){
    }

    public List<Anuncio> getAnunciosElegiveisDoFreelancer() {
        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
    }

    public Anuncio getAnuncioByID(String anuncioId) {
        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
    }

    public Anuncio getAnuncioById(String id) {
        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
    }
}
